// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea component should renders correctly 1`] = `
<View>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="gray.900"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs12"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-XS"
    text="input"
    textDecoration={null}
  />
  <Styled(Component)
    autoCapitalize="sentences"
    id="input"
    keyboardType="default"
    multiline={true}
    name="input"
    numberOfLines={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onEndEditing={[Function]}
    onFocus={[Function]}
    returnKeyType="next"
    value="foo"
  />
</View>
`;

exports[`TextArea component should renders correctly in case of error 1`] = `
<View>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="gray.900"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs12"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-XS"
    text="input"
    textDecoration={null}
  />
  <Styled(Component)
    autoCapitalize="sentences"
    id="input"
    keyboardType="default"
    multiline={true}
    name="input"
    numberOfLines={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onEndEditing={[Function]}
    onFocus={[Function]}
    returnKeyType="next"
    value="foo"
  />
  <Styled(View)>
    <Styled(View)
      spacingStyles="margin-right-XS"
    >
      <Styled(ImageComp)
        alt=""
        cacheType="immutable"
        height="14px"
        host=""
        isFastImage={false}
        onError={[Function]}
        onLoadStart={[Function]}
        onProgress={[Function]}
        priority="normal"
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../src/assets/images/alert-triangle.png",
          }
        }
        url=""
        width="16px"
      />
    </Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="error"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs12"
      fontWeight="extrabold"
      margin={null}
      numberOfLines={null}
      text="error"
      textDecoration={null}
    />
  </Styled(View)>
</View>
`;
